产品迭代演进

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -9,19 +9,37 @@
 
 <body>
     <div id="container">
-        <ul>
+        <ul class="tabs">
             <li class="active"><a href="#tab1">待办工作</a></li>
-            <li><a href="#tab1">项目信息</a></li>
-            <li><a href="#tab1">快捷记事</a></li>
+            <li><a href="#tab2">项目信息</a></li>
+            <li><a href="#tab3">快捷记事</a></li>
         </ul>
-        <div class="tabs">
-            <div id="#tab1" class="tab_content">
-                todolist
+        <div class="tab_containers">
+            <div id="tab1" class="tab_content">
+                <table width="100%">
+                    <tr><th>序号</th><th>事项</th><th>日期</th></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                </table>
             </div>
-            <div id="#tab2" class="tab_content">
-                projects
+            <div id="tab2" class="tab_content">
+                <table width="100%">
+                    <tr><th>序号</th><th>事项</th><th>日期</th></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                </table>
             </div>
-            <div id="#tab3" class="tab_content">
+            <div id="tab3" class="tab_content">
                 快捷记事
             </div>
         </div>
