摄像头传输流测试

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,20 +10,29 @@
 <body>
     <div id="container">
         <ul class="tabs">
-            <li class="active"><a href="#tab1">待办工作</a></li>
-            <li><a href="#tab2">项目信息</a></li>
-            <li><a href="#tab3">快捷记事</a></li>
+            <li class="active"><a href="#tab1">每月工作</a></li>
+            <li><a href="#tab2">待办工作</a></li>
+            <li><a href="#tab3">个人任务</a></li>
         </ul>
         <div class="tab_containers">
             <div id="tab1" class="tab_content">
                 <table width="100%">
-                    <tr><th>序号</th><th>事项</th><th>日期</th></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
+                    <tr><th>序号</th><th>事项</th><th>完成状态</th></tr>
+                    <tr>
+                        <td>1</td>
+                        <td>思特奇大学学习任务下发</td>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" checked>
+                                <div class="slider round"></div>
+                            </label>
+                        </td>
+                    </tr>
+                    <tr><td>2</td><td>迭代任务计划</td><td>日期</td></tr>
+                    <tr><td>3</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>4</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>5</td><td>事项</td><td>日期</td></tr>
+                    <tr><td>6</td><td>事项</td><td>日期</td></tr>
                     <tr><td>序号</td><td>事项</td><td>日期</td></tr>
                 </table>
             </div>
