权限模块调试准备

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -17,7 +17,11 @@
         <div class="tab_containers">
             <div id="tab1" class="tab_content">
                 <table width="100%">
-                    <tr><th>序号</th><th>事项</th><th>完成状态</th></tr>
+                    <tr>
+                        <th>序号</th>
+                        <th>事项</th>
+                        <th>完成状态</th>
+                    </tr>
                     <tr>
                         <td>1</td>
                         <td>思特奇大学学习任务下发</td>
@@ -28,6 +32,7 @@
                             </label>
                         </td>
                     </tr>
+
                     <tr><td>2</td><td>迭代任务计划</td><td>日期</td></tr>
                     <tr><td>3</td><td>事项</td><td>日期</td></tr>
                     <tr><td>4</td><td>事项</td><td>日期</td></tr>
@@ -36,21 +41,21 @@
                     <tr><td>序号</td><td>事项</td><td>日期</td></tr>
                 </table>
             </div>
-            <div id="tab2" class="tab_content">
-                <table width="100%">
-                    <tr><th>序号</th><th>事项</th><th>日期</th></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>
-                </table>
-            </div>
-            <div id="tab3" class="tab_content">
-                快捷记事
-            </div>
+<!--            <div id="tab2" class="tab_content">-->
+<!--                <table width="100%">-->
+<!--                    <tr><th>序号</th><th>事项</th><th>日期</th></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                    <tr><td>序号</td><td>事项</td><td>日期</td></tr>-->
+<!--                </table>-->
+<!--            </div>-->
+<!--            <div id="tab3" class="tab_content">-->
+<!--                快捷记事-->
+<!--            </div>-->
         </div>
     </div>
 </body>
