--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <ul class="tabs">
-            <li class="active"><a href="#tab1">每月工作</a></li>
-            <li><a href="#tab2">待办工作</a></li>
+            <li class="active"><a href="#tab1">待办工作</a></li>
+            <li><a href="#tab2">每月工作</a></li>
             <li><a href="#tab3">个人任务</a></li>
         </ul>
         <div class="tab_containers">
