--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -61,6 +61,13 @@
                 快捷记事
             </div>
         </div>
+        <div class="controls">
+            <input type="text" name="username" id="username" style="width:100px;" placeholder="username">
+            <input type="password" name="password" id="password" style="width:100px;" placeholder="Password">
+            <input type="hidden" name="token" id="token" style="width:100px;" placeholder="token">
+            <input type="button" id="login" value="登录">
+            <input type="button" id="fresh" value="刷新">
+        </div>
     </div>
 </body>
 <script src="./js/myscript.js"></script>
