--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>sitech-aicp</title>
 <link rel="stylesheet" href="main.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="lib/bootstrap-3.4.1-dist/css/bootstrap.css" type="text/css" media="screen" />
 <script src="./js/jquery.js"></script>
 </head>
 
@@ -68,7 +69,63 @@
             <input type="button" id="login" value="登录">
             <input type="button" id="fresh" value="刷新">
         </div>
+        <div class="table-responsive">
+            <table class="table">
+                <caption>响应式表格布局</caption>
+                <thead>
+                <tr>
+                    <th>产品</th>
+                    <th>付款日期</th>
+                    <th>状态</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>产品1</td>
+                    <td>23/11/2013</td>
+                    <td>待发货</td>
+                </tr>
+                <tr>
+                    <td>产品2</td>
+                    <td>10/11/2013</td>
+                    <td>发货中</td>
+                </tr>
+                <tr>
+                    <td>产品3</td>
+                    <td>20/10/2013</td>
+                    <td>待确认</td>
+                </tr>
+                <tr>
+                    <td>产品4</td>
+                    <td>20/10/2013</td>
+                    <td>已退货</td>
+                </tr>
+                </tbody>
+            </table>
+            <div id="example" style="text-align: center"> <ul id="pageLimit"></ul> </div>
+        </div>
     </div>
 </body>
 <script src="./js/myscript.js"></script>
+<script src="./lib/bootstrap-3.4.1-dist/js/bootstrap.js"></script>
+<script src="lib/bootstrap-paginator-master/bootstrap-paginator.js"></script>
+<script>
+    $('#pageLimit').bootstrapPaginator({
+        currentPage: 1,//当前的请求页面。
+        totalPages: 2,//一共多少页。
+        size:"normal",//应该是页眉的大小。
+        bootstrapMajorVersion: 3,//bootstrap的版本要求。
+        alignment:"right",
+        numberOfPages:5,//一页列出多少数据。
+        itemTexts: function (type, page, current) {//如下的代码是将页眉显示的中文显示我们自定义的中文。
+            switch (type) {
+                case "first": return "首页";
+                case "prev": return "上一页";
+                case "next": return "下一页";
+                case "last": return "末页";
+                case "page": return page;
+            }
+        }
+    });
+</script>
 </html>
